1998-05-18  Stephan Kulow  <coolo@kde.org>

	* kfiledialog.cpp: bugfixes

1998-05-15  Stephan Kulow  <coolo@kde.org>

	* kfileinfocontents.cpp: some more changes and speed ups 
	(caching and some other little things)

1998-05-14  Stephan Kulow  <coolo@kde.org>

	* kfileinfocontents.cpp: added addItemList 

	* kfileinfocontents.h: introduced KFileInfoContentsSignaler

	* kfileinfocontents.cpp: some more speed improvment

1998-05-10  Stephan Kulow  <coolo@kde.org>

	* kfiledialog.cpp: tried to speed up the refresh

1998-04-17  Stephan Kulow  <coolo@kde.org>

	* kfiledetaillist.cpp: implemented the date field
	
	* kfiledetaillist.cpp: made the columns wider

	* kfileinfocontents.cpp: use the new icons by Mark

Thu Apr 16 10:51:24 1998  Daniel Grana <grana@ie.iwi.unibe.ch>

	* kfiledialog.*: some small fixes concerning preview
        
        * kfileinfocontents.cpp: fixed sorting bug in preview
        
        * kfilepreview.*: small bug fixes
        
        * kpreview.*: small bug fixes
        
        * added some documentation

1998-04-15  Stephan Kulow  <coolo@kde.org>

	* kfilepreview.cpp: use a list box instead of simple view

	* kfiledialog.cpp: fixed an ugly bug

1998-04-14  Stephan Kulow  <coolo@kde.org>

	* kfiledialogconf.cpp: removed the width/height sliders
	
	* kfiledialog.cpp: save the width and height on exit

	* kfiledialogconf.cpp: added more guys to the about box

	* kfiledialog.h: removed init*Children. They were useless

	* kfiledialog.cpp: set the default size to a useful value

Mon Apr  6 17:30:18 1998  Daniel Grana <grana@ie.iwi.unibe.ch>

	* kfilepreview.*: restructured previewing, one can now easily
        use custom previewers, dynamically
        
        * kpreview.*: changes for allowing custom previewers, two previewers
        are hardcoded so far

	* kfiledialog.*: changes changes for allowing custom previewers
        
        * kfstest.cpp: changes to preview mode
        